LendingTree Lead Onboarding Automation/main/default/objects/Opportunity/fields/Enable_Email_Journey__c.field-meta.xml
<CustomField>
    <fullName>Enable_Email_Journey__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Email Journey</label>
    <type>Checkbox</type>
</CustomField>