LendingTree Lead Onboarding Automation/main/default/objects/Opportunity/fields/Enable_Message_Journey__c.field-meta.xml
<CustomField>
    <fullName>Enable_Message_Journey__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Message Journey</label>
    <type>Checkbox</type>
</CustomField>