LendingTree Lead Onboarding Automation/main/default/objects/Opportunity/fields/Forward_Journey_SMS_As_Email__c.field-meta.xml
<CustomField>
    <fullName>Forward_Journey_SMS_As_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forward Journey SMS As Email</label>
    <type>Checkbox</type>
</CustomField>