LendingTree Lead Onboarding Automation/main/default/objects/Opportunity/fields/integer_amount__c.field-meta.xml
<CustomField>
    <fullName>integer_amount__c</fullName>
    <description>Amount as an integer</description>
    <inlineHelpText>Amount as an integer</inlineHelpText>
    <label>integer_amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>