LendingTree Lead Onboarding Automation/main/default/objects/Opportunity/fields/Journey_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Journey_Account_Name__c</fullName>
    <description>Account name used by message journeys.</description>
    <inlineHelpText>Account name used by message journeys.</inlineHelpText>
    <label>Journey Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>