LendingTree Lead Onboarding Automation/main/default/objects/Opportunity/fields/Journey_Email__c.field-meta.xml
<CustomField>
    <fullName>Journey_Email__c</fullName>
    <label>Journey Email</label>
    <type>Email</type>
</CustomField>