LendingTree Lead Onboarding Automation/main/default/objects/Opportunity/fields/Loan_Request_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>Loan_Request_Unique_ID__c</fullName>
    <label>Loan Request Unique ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>