LendingTree Lead Onboarding Automation/main/default/objects/Opportunity/fields/Onboarding_journey_mobile__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_journey_mobile__c</fullName>
    <label>Onboarding journey mobile</label>
    <length>40</length>
    <type>Text</type>
</CustomField>