LendingTree Lead Onboarding Automation/main/default/objects/Opportunity/fields/Owner1FirstName__c.field-meta.xml
<CustomField>
    <fullName>Owner1FirstName__c</fullName>
    <formula>Owner_1__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner 1 First Name</label>
    <type>Text</type>
</CustomField>