LendingTree Lead Onboarding Automation/main/default/objects/Opportunity/fields/Owner_1__c.field-meta.xml
<CustomField>
    <fullName>Owner_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner 1</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Contact.Contact_Roles__c</field>
            <operation>equals</operation>
            <value>Business Owner</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>