LendingTree Lead Onboarding Automation/main/default/objects/Opportunity/fields/Owner_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Owner_1_Email__c</fullName>
    <formula>Owner_1__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner 1 Email</label>
    <type>Text</type>
</CustomField>