LendingTree Lead Onboarding Automation/main/default/objects/Opportunity/fields/second_journey_email_datetime__c.field-meta.xml
<CustomField>
    <fullName>second_journey_email_datetime__c</fullName>
    <description>The date and time at which the second journey email will be sent.</description>
    <inlineHelpText>The date and time at which the second journey email will be sent.</inlineHelpText>
    <label>second journey email datetime</label>
    <type>DateTime</type>
</CustomField>