LendingTree Lead Onboarding Automation/main/default/objects/Opportunity/fields/string_amount__c.field-meta.xml
<CustomField>
    <fullName>string_amount__c</fullName>
    <description>Amount as a string</description>
    <inlineHelpText>Amount as a string</inlineHelpText>
    <label>string_amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>