LendingTree Lead Onboarding Automation/main/default/objects/Opportunity/fields/third_journey_email_datetime__c.field-meta.xml
<CustomField>
    <fullName>third_journey_email_datetime__c</fullName>
    <description>The date and time at which the third journey email will be sent.</description>
    <inlineHelpText>The date and time at which the third journey email will be sent.</inlineHelpText>
    <label>third journey email datetime</label>
    <type>DateTime</type>
</CustomField>